Moved XP Bar Text to Shaders Before, it was in color.properties Now it's in shaders for more parity between vanilla / modded users

--- a/reNebula mint 16x 1.19/assets/minecraft/optifine/color.properties
+++ b/reNebula mint 16x 1.19/assets/minecraft/optifine/color.properties
@@ -7,8 +7,8 @@ xporb.time=12500
 ###############################################################################
 # Text colors
 ###############################################################################
-# XP Bar Level
-text.xpbar=f1e5ff
+# XP Bar Level (Deprecated; shaders)
+# text.xpbar=f1e5ff
 
 # Default Text Color Codes
 text.code.0=08000f
@@ -31,11 +31,13 @@ text.code.15=ffffff
 ###############################################################################
 # Resource loading screen
 ###############################################################################
-# Background color (We have shaders for this)
+# Background color (Deprecated; shaders)
 # screen.loading=6f4aba
+
+# (Deprecated; parity between OptiFine/Colormatic and Vanilla, but you can still use these if you want)
 # Loading bar background color
-screen.loading.bar=6f4aba
-# Loading bar outline
-screen.loading.outline=b68cff
-# Loading bar foreground color
-screen.loading.progress=b68cff
+# screen.loading.bar=6f4aba
+# # Loading bar outline
+# screen.loading.outline=b68cff
+# # Loading bar foreground color
+# screen.loading.progress=b68cff
