--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ reNebula mint 16x 1.19/assets/minecraft/textures/item/OLD
 reNebula mint 16x 1.19/assets/minecraft/textures/item/ORIGINAL TOOLS
 reNebula mint 16x 1.19/assets/minecraft/textures/item/SCRAPPED
 
-# Filetypes
+# Files
 *.ase
 *.aseprite
 desktop.ini
+.markdownlint.json
