Fix broken paths

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Filepaths
-Hubble 16x mint 1.19/assets/minecraft/Other
-Hubble 16x mint 1.19/assets/minecraft/textures/item/OLD
-Hubble 16x mint 1.19/assets/minecraft/textures/item/ORIGINAL TOOLS
-Hubble 16x mint 1.19/assets/minecraft/textures/item/SCRAPPED
+Hubble-16x/assets/minecraft/Other
+Hubble-16x/assets/minecraft/textures/item/OLD
+Hubble-16x/assets/minecraft/textures/item/ORIGINAL TOOLS
+Hubble-16x/assets/minecraft/textures/item/SCRAPPED
 
 # Filetypes
 *.ase
