--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Filepaths
+Archives/
 Kepler-16x/assets/minecraft/Other
 Kepler-16x/assets/minecraft/textures/item/OLD
 Kepler-16x/assets/minecraft/textures/item/ORIGINAL TOOLS
